Revised README.md to provide information about running project